# dark-forest-toolkit

./: .gitignore  CONTRACT_REFERENCE.md  README.md  ROADMAP.md  pyproject.toml  test_integration.py  test_signer.py  test_signer_e2e.py
dark_forest/: __init__.py  abi.py  agent.py  check_abi_sync.py  cli.py  generate_abi.py  generate_ref.py  keystore.py  signer_server.py
docs/: ARCHITECTURE.md  BALANCE.md  OPS.md
scripts/: dark_forest_econ_sim.py  dark_forest_economy_sim.py  economy_scarcity_sim.py  energy_economy_sweep.py  fast_sweep.py  param_sweep.py
